--- a/plugins/dcmp/dag_templates/dag_code.template
+++ b/plugins/dcmp/dag_templates/dag_code.template
@@ -14,7 +14,8 @@ from airflow.operators.bash_operator import BashOperator
 from airflow.operators.dummy_operator import DummyOperator
 from airflow.operators.hive_operator import HiveOperator
 from airflow.operators.python_operator import PythonOperator, ShortCircuitOperator
-from airflow.operators.sensors import TimeSensor, TimeDeltaSensor, NamedHivePartitionSensor
+from airflow.operators.sensors import TimeSensor, TimeDeltaSensor
+from airflow.sensors import NamedHivePartitionSensor
 from airflow.utils.email import send_email
 
 
