--- a/plugins/dcmp/dag_templates/dag_code.template
+++ b/plugins/dcmp/dag_templates/dag_code.template
@@ -15,9 +15,12 @@ from airflow.operators.dummy_operator import DummyOperator
 from airflow.operators.hive_operator import HiveOperator
 from airflow.operators.python_operator import PythonOperator, ShortCircuitOperator
 from airflow.operators.sensors import TimeSensor, TimeDeltaSensor
-from airflow.sensors import NamedHivePartitionSensor
 from airflow.utils.email import send_email
 
+try:
+    from airflow.operators.sensors import NamedHivePartitionSensor
+except ImportError as e:
+    from airflow.sensors import NamedHivePartitionSensor # Airflow 1.10
 
 TI = TaskInstance
 
